# scrappy

./: .gitignore  create_google_forms.py  pyproject.toml
scrappy/: david_demo.ipynb  founder.py  founder_OLD.py  innovator.py  iterative.ipynb  iterative.py  joseph_langchain_functions.py  jtbd.py  marvin_assistant.py  scrappy.ipynb  scrappy.py  utils.py
scrappy/notebooks/: test_founder.ipynb
scrappy/notebooks/fashion/: farfetch.txt  test_innovator_fashion.ipynb
scrappy/notebooks/financial_services/: jtbd_0.json  jtbd_1.json  jtbd_2.json  jtbd_3.json  jtbd_4.json  jtbd_5.json  test_founder_financial_services.ipynb  test_innovator_financial_services.ipynb
scrappy/notebooks/innovation/: jtbd_0.json  jtbd_1.json  jtbd_2.json  jtbd_3.json  jtbd_4.json  jtbd_5.json  jtbd_6.json  test_founder_innovation.ipynb  test_innovator_innovation.ipynb
