[tool.poetry]
name = "scrappy"
version = "0.1.0"
description = "Autonomous web scraping + research agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-aiplatform = "^1.51.0"
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"
typer = "^0.12.3"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
